--- a/projects/GaussianExample/Packages/manifest.json
+++ b/projects/GaussianExample/Packages/manifest.json
@@ -1,7 +1,12 @@
 {
   "dependencies": {
-    "org.nesnausk.gaussian-splatting": "file:../../../package",
+    "com.meta.xr.sdk.all": "66.0.0",
     "com.unity.ide.rider": "3.0.24",
+    "com.unity.shadergraph": "14.0.8",
+    "com.unity.xr.interaction.toolkit": "3.0.4",
+    "com.unity.xr.management": "4.5.0",
+    "com.unity.xr.openxr": "1.11.0",
+    "org.nesnausk.gaussian-splatting": "file:../../../package",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
